...
    <string name="role_administrator_employee_or_customer">Role (Administrator, Employee or Customer)</string>
    <string name="welcome_to_service_novigrad">Welcome To Service Novigrad!</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="role">Role:</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="services">Services</string>
    <string name="accounts">Accounts</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="select_one_of_the_following">Select one of the following:</string>
    <string name="manage_office_hours">Manage Office Hours</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="search">Search:</string>
...
